--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -5,12 +5,12 @@
   sort_reverse = params[:sort_reverse]
   properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
   # columns paginate
-  @searchable_fields = @model_config.list.fields.select(&:searchable)
+  @filterable_fields = @model_config.list.fields.select(&:queryable?)
   @style, @other, properties = get_column_set(properties)
 %>
 
 <% head_javascript "rails_admin/application.js" %>
-<% head_javascript "rails_admin/filter-box.js" %>
+<% head_javascript "rails_admin/ra.filter-box.js" %>
 
 <% head_style "rails_admin/list" %>
 
@@ -22,26 +22,39 @@
   <% end %>
 <% end %>
 
+<%  
+  @ordered_filters = params[:filters].inject({}) do |memo, filter|
+    field_name = filter.first
+    filter.last.each do |index, filter_hash|
+      memo[index] = { field_name => filter_hash } unless filter_hash['disabled']
+    end
+    memo
+  end.to_a.sort_by(&:first) unless params[:filters].blank?
+%>
+
 <script>
   $j(document).ready(function($) {
     $(this).one("ajax:success", function(e, data, status, xhr) {
       $("#content").html(data);
     });
     
-    <%= params[:filters].map do |field_name, values_hash|
-          field = @searchable_fields.find{ |field| field.name == field_name.intern }
-          values_hash.map do |value_hash|
-            unless value_hash['disabled']
-              field_options = case field.type
-              when :enum
-                options_for_select(field.with(:object => @abstract_model.model.new).enum).gsub("\n", '')
-              else
-                ''
-              end 
-              "append_filter('#{field.label}', '#{field.name}', '#{field.type}', '#{value_hash['value']}', '#{value_hash['operator']}', '#{field_options}');"
-            end
-          end.join
-        end.join unless params[:filters].blank? %>
+    <%= 
+      @ordered_filters.map do |duplet|
+        filter_index = duplet[0]
+        filter_for_field = duplet[1]
+        filter_name = filter_for_field.keys.first
+        filter_hash = filter_for_field.values.first
+        field = @filterable_fields.find{ |field| field.name == filter_name.intern }
+        
+        field_options = case field.type
+        when :enum
+          options_for_select(field.with(:object => @abstract_model.model.new).enum, filter_hash['value']).gsub("\n", '')
+        else
+          ''
+        end
+        "$.filters.append('#{field.label}', '#{field.name}', '#{field.type}', '#{filter_hash['value']}', '#{filter_hash['operator']}', '#{field_options}', #{filter_index});"
+      end.join if @ordered_filters
+    %>  
   });
 </script>
       <div class="ra-block">
@@ -72,8 +85,8 @@
                 <input type="submit" class="ra-button" value="<%= t("admin.list.search").upcase %>" />
                 
                 <select id="filter_select">
-                  <option value="">Add filter</option>
-                  <% @searchable_fields.each do |field| %>
+                  <option value="">Add filter...</option>
+                  <% @filterable_fields.each do |field| %>
                     <% field_options = case field.type
                     when :enum
                       CGI.escapeHTML options_for_select(field.with(:object => @abstract_model.model.new).enum).gsub("\n", '')
