The filter area has pretty search boxes, and it's selects only get 'uniformed' once.

--- a/public/stylesheets/rails_admin/base.css
+++ b/public/stylesheets/rails_admin/base.css
@@ -38,3 +38,8 @@ div.checker input.checkbox {
 .form .columns .column {
   width: inherit;
 }
+
+.filter input.text_field {
+  width: 150px;
+  height: 20px;
+}
