Fixed ajax loading.

--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -7,7 +7,7 @@
     = render(:partial => 'layouts/rails_admin/header')
     #wrapper.wat-cf
       #main
-        = yield
+        #content= yield
         #footer
           %p Rails Admin | 2011
       = render :partial => "layouts/rails_admin/sidebar"
