--- a/app/views/layouts/rails_admin/export.html.erb
+++ b/app/views/layouts/rails_admin/export.html.erb
@@ -4,7 +4,7 @@
 <% content_for :breadcrumb do %>
   <li><%= home_link %></li>
   <li>&rsaquo; <%= link_to(t('admin.dashboard.name'), rails_admin_dashboard_path) %></li>
-  <li>&rsaquo; <%= link_to(@model_config.label, rails_admin_list_path(:model_name => @abstract_model.to_param)) %></li>
+  <li>&rsaquo; <%= link_to(@model_config.label, list_path(:model_name => @abstract_model.to_param)) %></li>
   <li>&rsaquo; <span><%= @page_name %></span></li>
 <% end %>
 
