--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -41,9 +41,9 @@
               %td{:colspan => "4"}
                 .pagination
                   - if @page_count.to_i > 1
-                    = paginate(@current_page, @page_count, :url => params.reject{|t| t == "page" || t=="all"}).html_safe
+                    = paginate(@current_page, @page_count, :url => params.except("page", "all")).html_safe
                   - if @page_count.to_i == 2
-                    = link_to(t("admin.list.show_all"), rails_admin_history_model_path(params.reject{|t| t == "page"}.merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")))
+                    = link_to(t("admin.list.show_all"), rails_admin_history_model_path(params.except("page").merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")))
         %tbody
           - @history.each_with_index do |object, index|
             %tr{:class => index % 2 == 0 ? "odd" : "even"}
