--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -13,16 +13,15 @@
   head_javascript "rails_admin/ra.filter-box.js"
   head_style "rails_admin/list"
     
-  params[:filters] ||= []
-  @ordered_filters = params[:filters].inject({}) do |memo, filter|
-    field_name = filter.first
-    filter.last.each do |index, filter_hash|
-      memo[index] = { field_name => filter_hash } unless filter_hash['disabled']
-    end
-    memo
+  if params[:filters]
+    @ordered_filters = params[:filters].inject({}) { |memo, filter|
+      field_name = filter.first
+      filter.last.each do |index, filter_hash|
+        memo[index] = { field_name => filter_hash } unless filter_hash['disabled']
+      end
+      memo
+    }.to_a.sort_by(&:first)
   end
-  
-  @ordered_filters = @ordered_filters.to_a.sort_by(&:first) unless params[:filters].blank?
   
   @ordered_filter_string = @ordered_filters.map do |duplet|
     filter_index = duplet[0]
