Added scope for filtering_(multi)select options initial lookup

--- a/app/views/rails_admin/main/_form_filtering_select.html
+++ b/app/views/rails_admin/main/_form_filtering_select.html
@@ -6,7 +6,7 @@
   if xhr
     collection = [[field.formatted_value, selected_id]]
   else
-    collection = field.associated_collection
+    collection = field.associated_collection(@authorization_adapter)
   end
 %>
 
