--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -9,7 +9,7 @@
       [o.send(config.object_label_method), o.id]
     end
   else
-    collection = field.associated_collection.sort_by {|a| selected_ids.index(a[1]) || selected_ids.size }
+    collection = field.associated_collection(@authorization_adapter).sort_by {|a| selected_ids.index(a[1]) || selected_ids.size }
   end
 %>
 
