--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -60,7 +60,7 @@
   .content
     .control
       %span(style="margin: 3px 6px")
-        %select#filter_select.uniform
+        %select#filter_select.small-uniform
           %option{:value => ""} Add filter...
           - @filterable_fields.each do |field|
             - field_options = case field.type
