--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -1,6 +1,6 @@
 :ruby
   query = params[:query]
-  params = request.params.except(:action, :controller, :model_name, :utf8, :bulk_export)
+  params = request.params.except(:authenticity_token, :action, :controller, :model_name, :utf8, :bulk_export)
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
   properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
