--- a/public/stylesheets/rails_admin/theme/activo/style.css
+++ b/public/stylesheets/rails_admin/theme/activo/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*  Activo's main stylesheet (alpha version!)
  *
  *  David Marquês Francisco
@@ -10,7 +9,7 @@
  *  David Marquês Francisco
  *  (dfrancisc[at]gmail.com)
  *
-
+ */
 /*  Stylesheet for formtastic
  *
  *  David Marquês Francisco
@@ -190,12 +189,12 @@ form.formtastic {
 body {
   color: #111111;
   background: #c4c4c4 url("images/bgd.png");
-  font-family: helvetica, arial, sans-serif; }
+  font-family: "MuseoSans500", helvetica, arial, sans-serif; }
 
 h1, h2, h3 {
   color: #111111;
   font-weight: normal;
-  font-family: helvetica, arial, sans-serif; }
+  font-family: "Museo700", helvetica, arial, sans-serif; }
 
 a:link, a:visited, a:hover, a:active {
   color: #111111; }
@@ -368,7 +367,7 @@ hr {
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6); }
     #sidebar .block h4 {
       font-weight: normal;
-      font-family: helvetica, arial, sans-serif; }
+      font-family: "Museo700", helvetica, arial, sans-serif; }
   #sidebar .notice {
     color: white;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
@@ -409,6 +408,23 @@ hr {
       text-shadow: 0 1px 0 white; }
     #sidebar ul li.active a {
       color: #a4a4a4; }
+    #sidebar ul li ul {
+      background: white;
+      border: 2px solid white;
+      box-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
+      display: none;
+      left: -164px;
+      position: absolute;
+      top: -2px;
+      width: 160px; }
+      #sidebar ul li ul li {
+        background-position: 10px 50%; }
+        #sidebar ul li ul li:hover {
+          background-color: #dddddd; }
+        #sidebar ul li ul li:last-child {
+          border-bottom: none; }
+    #sidebar ul li:hover ul {
+      display: block; }
 
 .breadcrumb {
   background-color: #f4f4f4;
@@ -486,7 +502,7 @@ hr {
   background: #f8f8f8; }
 
 .form label.label {
-  font-family: helvetica, arial, sans-serif;
+  font-family: "MuseoSans500", helvetica, arial, sans-serif;
   font-weight: normal;
   color: #666666; }
 .form input.text_field, .form textarea.text_area {
@@ -533,7 +549,7 @@ hr {
     display: inline; }
 
 .search_box {
-  font-family: helvetica, arial, sans-serif;
+  font-family: "MuseoSans500", helvetica, arial, sans-serif;
   font-size: 13px;
   border: 0px;
   background-color: transparent;
@@ -575,7 +591,7 @@ hr {
   -webkit-border-radius: 13px;
   border-radius: 13px;
   float: left;
-  font-family: helvetica, arial, sans-serif;
+  font-family: "MuseoSans500", helvetica, arial, sans-serif;
   font-size: 13px;
   height: 25px;
   margin: 0 25px 15px 0;
@@ -658,7 +674,7 @@ ul.list li {
 a.button, button.button {
   background: #edeeed url("images/button-background.png") top;
   border: 1px solid #c3c4ba;
-  font-family: helvetica, arial, sans-serif;
+  font-family: "MuseoSans500", helvetica, arial, sans-serif;
   font-weight: normal;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -701,7 +717,7 @@ a.button:active, button.button:active {
   font-weight: normal;
   text-transform: lowercase;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-  font-family: helvetica, arial, sans-serif;
+  font-family: "MuseoSans500", helvetica, arial, sans-serif;
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
