--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -90,7 +90,8 @@
           %thead
             %tr
               %th.first
-                %input.checkbox.toggle{:type => "checkbox"}
+                - if authorized? :delete, @abstract_model
+                  %input.checkbox.toggle{:type => "checkbox"}
               %th.other.left{ :style => "#{'display: none' if @other.include?("left")}" }...
               - properties.each do |property|
                 - property_name = property.name
@@ -112,10 +113,13 @@
               - can_edit  = authorized?(:edit, @abstract_model, object)
               - edit_path = rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id) if can_edit
               - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
+              - can_delete = authorized? :delete, @abstract_model, object
 
               %tr{:class => row_class, :"data-link" => (edit_path if can_edit)}
 
-                %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
+                %td.action.select
+                  - if can_delete
+                    = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
                 - other_left = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param).reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1))
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
                 - properties.map{|property| property.bind(:object, object)}.each do |property|
@@ -127,7 +131,7 @@
                     = action_icon(show_url, :show, "Show")
                   - if can_edit
                     = action_icon(edit_path, :edit, t("admin.list.edit_action"))
-                  - if authorized? :delete, @abstract_model, object
+                  - if can_delete
                     = action_icon(rails_admin_delete_path(@abstract_model, object), :cross, t("admin.list.delete_action"))
 
         .pagination
