--- a/app/views/layouts/rails_admin/_flash.html.haml
+++ b/app/views/layouts/rails_admin/_flash.html.haml
@@ -1,9 +1,9 @@
 - if flash && (flash[:error] || flash[:notice])
   .flash
-    - if flash && flash[:error].present?
+    - if flash[:error].present?
       .message.error
         %p= flash[:error]
 
-    - if flash && flash[:notice].present?
+    - if flash[:notice].present?
       .message.notice
         %p= flash[:notice]
