--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -86,11 +86,13 @@
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
       = form_tag rails_admin_bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
         = hidden_field_tag :bulk_action
+        - can_export = authorized?(:export, @abstract_model)
+        - can_bulk_action = can_export || authorized?(:delete, @abstract_model)
         %table.table.grid
           %thead
             %tr
               %th.first
-                - if authorized? :delete, @abstract_model
+                - if can_bulk_action
                   %input.checkbox.toggle{:type => "checkbox"}
               %th.other.left{ :style => "#{'display: none' if @other.include?("left")}" }...
               - properties.each do |property|
@@ -113,12 +115,11 @@
               - can_edit  = authorized?(:edit, @abstract_model, object)
               - edit_path = rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id) if can_edit
               - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
-              - can_delete = authorized? :delete, @abstract_model, object
 
               %tr{:class => row_class, :"data-link" => (edit_path if can_edit)}
 
                 %td.action.select
-                  - if can_delete
+                  - if can_bulk_action
                     = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
                 - other_left = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param).reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1))
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
@@ -131,7 +132,7 @@
                     = action_icon(show_url, :show, "Show")
                   - if can_edit
                     = action_icon(edit_path, :edit, t("admin.list.edit_action"))
-                  - if can_delete
+                  - if authorized? :delete, @abstract_model, object
                     = action_icon(rails_admin_delete_path(@abstract_model, object), :cross, t("admin.list.delete_action"))
 
         .pagination
@@ -145,7 +146,7 @@
         
         .columns.wat-cf
           .column.right
-            - if authorized? :export, @abstract_model
+            - if can_export
               = action_button rails_admin_export_path(params.reject{|key, value| key.to_sym == :page}), t("admin.list.export_action"), nil, :method => :post
               = action_button '#', t("admin.list.export_selected"), nil, :onclick => "$j('#bulk_action').val('export'); $j('#bulk_form').submit(); return false;"
             
