Don't generate item links if the item is nil
This can happen when an alternative history implementation is used which does
not contain the word "Destroy" in the message when a record is destroyed.

--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -45,7 +45,7 @@
                 = object.username
               - if @general
                 %td.int
-                  - unless object.message.match("Destroy")
+                  - if !object.message.match("Destroy") && object.item.present?
                     = link_to object.item, rails_admin_history_object_path(:id => object.item), :class => "historyLink"
                   - else
                     = object.item
