--- a/app/views/rails_admin/main/bulk_delete.html.haml
+++ b/app/views/rails_admin/main/bulk_delete.html.haml
@@ -10,7 +10,7 @@
       %p Are you sure you want to delete the following object along with all of the following related items will be deleted:
       %div{:style=>"padding-left:20px"}
         = render :partial => "delete_notice", :collection => @bulk_objects
-      = form_tag rails_admin_bulk_destroy_path(:model_name => @abstract_model.to_param, :bulk_ids => @bulk_objects.map(&:id)) do
+      = form_tag bulk_destroy_path(:model_name => @abstract_model.to_param, :bulk_ids => @bulk_objects.map(&:id)) do
         %br
         %br
         .group.navform.wat-cf
