--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -71,12 +71,12 @@
             %option{"data-field-label" => field.label, "data-field-name" => field.name, "data-field-options" => field_options, "data-field-type" => field.type, "data-field-value" => ""}= field.label
     
       - if authorized? :new, @abstract_model
-        = action_button rails_admin_new_path, t("admin.list.add_new"), :add
+        = action_button new_path, t("admin.list.add_new"), :add
 
       - if authorized? :delete, @abstract_model
         = action_button '#', t("admin.list.delete_selected"), :cross, :onclick => "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;"
       
-      = form_tag(rails_admin_list_post_path(params.merge(:model_name => @abstract_model.to_param).except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
+      = form_tag(list_post_path(params.merge(:model_name => @abstract_model.to_param).except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
         %span.search
           %input#search.search_box{:name => "query", :type => "text", :value => query, :placeholder => "#{t("admin.list.search")}"}
           %input.search_submit{:type => "submit", :value => ""}
@@ -84,7 +84,7 @@
     %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
-      = form_tag rails_admin_bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
+      = form_tag bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
         = hidden_field_tag :bulk_action
         - can_export = authorized?(:export, @abstract_model)
         - can_bulk_action = can_export || authorized?(:delete, @abstract_model)
@@ -101,7 +101,7 @@
                 - selected = sort == property_name.to_s
                 %th{:class => "#{property.css_class} #{selected ? "selected" : nil}"}
                   - if property.sortable
-                    - sort_location = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).except("sort_reverse").merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {:sort_reverse => "false"}))
+                    - sort_location = list_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).except("sort_reverse").merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {:sort_reverse => "false"}))
                     - sort_direction = selected ? (sort_reverse == 'true' ? "ascending" : "descending") : nil
                     = link_to(property_pretty_name.upcase, sort_location, :class => sort_direction, :remote => true)
                   - else
@@ -113,7 +113,7 @@
           %tbody
             - @objects.each do |object|
               - can_edit  = authorized?(:edit, @abstract_model, object)
-              - edit_path = rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id) if can_edit
+              - edit_path = edit_path(:model_name => @abstract_model.to_param, :id => object.id) if can_edit
               - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
 
               %tr{:class => row_class, :"data-link" => (edit_path if can_edit)}
@@ -121,11 +121,11 @@
                 %td.action.select
                   - if can_bulk_action
                     = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
-                - other_left = rails_admin_list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i - 1))
+                - other_left = list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i - 1))
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
                 - properties.map{|property| property.bind(:object, object)}.each do |property|
                   %td{:class => "#{property.css_class}"}= ([:text, :string].include?(property.type) && property.truncated?) ? property.formatted_value.truncate(40) : property.formatted_value
-                - other_right = rails_admin_list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i + 1))
+                - other_right = list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i + 1))
                 %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
                 %td.last
                   - if show_url = url_for(object) rescue nil
@@ -133,13 +133,13 @@
                   - if can_edit
                     = action_icon(edit_path, :edit, t("admin.list.edit_action"))
                   - if authorized? :delete, @abstract_model, object
-                    = action_icon(rails_admin_delete_path(@abstract_model, object), :cross, t("admin.list.delete_action"))
+                    = action_icon(delete_path(@abstract_model, object), :cross, t("admin.list.delete_action"))
 
         .pagination
           - if @page_count.to_i > 1
             = paginate(@current_page, @page_count, :url => params).html_safe
           - if @record_count.to_i <= 100 && @page_count.to_i > 1
-            = link_to(t("admin.list.show_all"), rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")), :method => :get, :remote => true)
+            = link_to(t("admin.list.show_all"), list_path(params.merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")), :method => :get, :remote => true)
         .left(style="white-space: nowrap; padding-top:0.5em;")
           = @record_count
           = @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.label.downcase.pluralize : @model_config.label.downcase)
@@ -147,9 +147,9 @@
         .columns.wat-cf
           .column.right
             - if can_export
-              = action_button rails_admin_export_path(params.except("page")), t("admin.list.export_action"), nil, :method => :post
+              = action_button export_path(params.except("page")), t("admin.list.export_action"), nil, :method => :post
               = action_button '#', t("admin.list.export_selected"), nil, :onclick => "$j('#bulk_action').val('export'); $j('#bulk_form').submit(); return false;"
             
-            = action_button rails_admin_history_model_path, t("admin.history.name")
+            = action_button history_model_path, t("admin.history.name")
       .wat-cf
 
